Wonderful news! Docking works! It even looks awesome. I made the environment be menubars at the top and a docking space in the main working area. I'm also thinking of messing with the colors a little, but it isn't really needed. It looks good as it is.

--- a/PizzaBoxRTEngine/PizzaBoxRTEngine/imgui.ini
+++ b/PizzaBoxRTEngine/PizzaBoxRTEngine/imgui.ini
@@ -1,32 +1,52 @@
 [Window][Debug##Default]
+ViewportPos=765,575
+ViewportId=0x9F5F46A1
+Size=1204,599
+Collapsed=0
+
+[Window][Hello, world!]
+Pos=1377,526
+Size=266,172
+Collapsed=0
+
+[Window][Dear ImGui Stack Tool]
+Pos=1410,19
+Size=510,998
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][DockSpace]
+Size=1920,994
+Collapsed=0
+
+[Window][DockSpaceViewport_11111111]
+Pos=0,19
+Size=1920,998
+Collapsed=0
+
+[Window][New World]
+Pos=1388,19
+Size=532,936
+Collapsed=0
+
+[Window][DockSpaceViewport_9F5F46A1]
 ViewportPos=1125,714
 ViewportId=0x9F5F46A1
 Size=478,339
 Collapsed=0
 
-[Window][Hello, world!]
-Pos=212,294
-Size=275,146
+[Window][Dear ImGui Debug Log]
+Size=1920,987
 Collapsed=0
+DockId=0x00000001,0
 
-[Window][Dear ImGui Stack Tool]
-Pos=1037,422
-Size=396,209
-Collapsed=0
-
-[Window][DockSpace]
-Size=800,600
-Collapsed=0
-
-[Window][DockSpaceViewport_11111111]
-Pos=0,19
-Size=800,581
-Collapsed=0
-
-[Window][New World]
-Pos=446,191
-Size=275,146
+[Window][Full Screen Window]
+Pos=0,0
+Size=1920,1017
 Collapsed=0
 
 [Docking][Data]
+DockSpace   ID=0x052CF035 Window=0x4C923830 Pos=0,42 Size=1920,998 Split=X
+  DockNode  ID=0x00000001 Parent=0x052CF035 SizeRef=1408,998 CentralNode=1
+  DockNode  ID=0x00000002 Parent=0x052CF035 SizeRef=510,998 Selected=0x3051011F
 
