I HAVE DONE IT There is a reason that there are days between the last commit and this one. DAYS. I added CMake. The main change was the CMakeLists file. There were more things happening. I added a better way to deal with Panels. Set up a bunch of classes that should make using the Renderer easy. It can be accessed by Viewport, a subtype of Panel. I should be able to also easily change the Backend for the Renderer. Other than that, also made the code cleaner.

--- a/PizzaBoxRTEngine/PizzaBoxRTEngine/PizzaBoxRTEngine.vcxproj
+++ b/PizzaBoxRTEngine/PizzaBoxRTEngine/PizzaBoxRTEngine.vcxproj
@@ -141,11 +141,17 @@
     <ClCompile Include="..\..\External\imgui\imgui_tables.cpp" />
     <ClCompile Include="..\..\External\imgui\imgui_widgets.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Panel.cpp" />
+    <ClCompile Include="Renderer.cpp" />
+    <ClCompile Include="Viewport.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\External\imgui\backends\imgui_impl_glfw.h" />
     <ClInclude Include="..\..\External\imgui\backends\imgui_impl_opengl3.h" />
     <ClInclude Include="..\..\External\imgui\imgui.h" />
+    <ClInclude Include="Panel.h" />
+    <ClInclude Include="Renderer.h" />
+    <ClInclude Include="Viewport.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
