--- a/PizzaBoxRTEngine/PizzaBoxRTEngine/imgui.ini
+++ b/PizzaBoxRTEngine/PizzaBoxRTEngine/imgui.ini
@@ -10,8 +10,8 @@ Size=266,172
 Collapsed=0
 
 [Window][Dear ImGui Stack Tool]
-Pos=1410,19
-Size=510,998
+Pos=390,19
+Size=510,581
 Collapsed=0
 DockId=0x00000002,0
 
@@ -42,11 +42,17 @@ DockId=0x00000001,0
 
 [Window][Full Screen Window]
 Pos=0,0
-Size=1920,1017
+Size=900,600
 Collapsed=0
 
+[Window][Viewport]
+Pos=0,19
+Size=388,581
+Collapsed=0
+DockId=0x00000001,0
+
 [Docking][Data]
-DockSpace   ID=0x052CF035 Window=0x4C923830 Pos=0,42 Size=1920,998 Split=X
-  DockNode  ID=0x00000001 Parent=0x052CF035 SizeRef=1408,998 CentralNode=1
+DockSpace   ID=0x052CF035 Window=0x4C923830 Pos=60,102 Size=900,581 Split=X
+  DockNode  ID=0x00000001 Parent=0x052CF035 SizeRef=1408,998 CentralNode=1 Selected=0x13926F0B
   DockNode  ID=0x00000002 Parent=0x052CF035 SizeRef=510,998 Selected=0x3051011F
 
