Swapped OpenGL with Vulkan. Other than that, not many changes. I needed to add so many scary functions. Thank you ImGUI example app. Building works with both VS and CMake, but the VS is just my PC, and CMake is all windows. Still no RTX. Actually, no visible difference from the last version.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.7)
 
 project(PizzaBoxRTEngine)
 
@@ -9,7 +9,7 @@ set(IMGUI_SOURCES
     "${CMAKE_CURRENT_SOURCE_DIR}/External/imgui/imgui_tables.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/External/imgui/imgui_widgets.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/External/imgui/backends/imgui_impl_glfw.cpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/External/imgui/backends/imgui_impl_opengl3.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/External/imgui/backends/imgui_impl_vulkan.cpp"
 )
 
 set(ENGINE_SOURCES
@@ -31,6 +31,9 @@ include_directories(PizzaBoxRTEngine PUBLIC
     "${CMAKE_CURRENT_SOURCE_DIR}/External/glm/glm"
 )
 
+find_package(Vulkan REQUIRED)
+target_link_libraries(PizzaBoxRTEngine PRIVATE Vulkan::Vulkan)
+
 set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
@@ -39,4 +42,6 @@ add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/External/glfw")
 
 target_link_libraries(PizzaBoxRTEngine PRIVATE glfw)
 
-target_link_libraries(PizzaBoxRTEngine PRIVATE opengl32)
+# Define C++ version to be used for building the project
+set_property(TARGET ${Recipe_Name} PROPERTY CXX_STANDARD 20)
+set_property(TARGET ${Recipe_Name} PROPERTY CXX_STANDARD_REQUIRED ON)
