--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.7)
 
-project(PizzaBoxRTEngine)
+project(PizzaBox)
+
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(IMGUI_SOURCES 
     "${CMAKE_CURRENT_SOURCE_DIR}/External/imgui/imgui.cpp"
@@ -18,13 +20,13 @@ set(ENGINE_SOURCES
     "${CMAKE_CURRENT_SOURCE_DIR}/PizzaBoxRTEngine/PizzaBoxRTEngine/Panel.cpp"
 )
 
-add_executable(PizzaBoxRTEngine
+add_executable(PizzaBox
     "${CMAKE_CURRENT_SOURCE_DIR}/PizzaBoxRTEngine/PizzaBoxRTEngine/main.cpp"
     ${IMGUI_SOURCES}
     ${ENGINE_SOURCES}
 )
 
-include_directories(PizzaBoxRTEngine PUBLIC 
+include_directories(PizzaBox PUBLIC 
     "${CMAKE_CURRENT_SOURCE_DIR}/PizzaBoxRTEngine/PizzaBoxRTEngine"
     "${CMAKE_CURRENT_SOURCE_DIR}/External/imgui"
     "${CMAKE_CURRENT_SOURCE_DIR}/External/imgui/backends"
@@ -32,7 +34,7 @@ include_directories(PizzaBoxRTEngine PUBLIC
 )
 
 find_package(Vulkan REQUIRED)
-target_link_libraries(PizzaBoxRTEngine PRIVATE Vulkan::Vulkan)
+target_link_libraries(PizzaBox PRIVATE Vulkan::Vulkan)
 
 set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
@@ -40,7 +42,7 @@ set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 
 add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/External/glfw")
 
-target_link_libraries(PizzaBoxRTEngine PRIVATE glfw)
+target_link_libraries(PizzaBox PRIVATE glfw)
 
 # Define C++ version to be used for building the project
 set_property(TARGET ${Recipe_Name} PROPERTY CXX_STANDARD 20)
