Put a bunch of shadow wizzard money gang RT stuff in the background. Didn't pull it into the rest of the project yet. Soon. Also volk. It all volk now. All the way down.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,11 @@ cmake_minimum_required(VERSION 3.7)
 project(PizzaBox)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set(IMGUI_VULKAN_DEBUG_REPORT 1)
 
-set(GLFW_BUILD_X11 1)
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /STACK:4096")
+
+#set(GLFW_BUILD_X11 1)
 #set(GLFW_BUILD_WAYLAND 1)
 
 set(IMGUI_SOURCES 
@@ -21,14 +24,16 @@ set(ENGINE_SOURCES
     "${CMAKE_CURRENT_SOURCE_DIR}/PizzaBoxRTEngine/PizzaBoxRTEngine/Panels/Viewport.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/PizzaBoxRTEngine/PizzaBoxRTEngine/Panels/Panel.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/PizzaBoxRTEngine/PizzaBoxRTEngine/Rendering/Renderer.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/PizzaBoxRTEngine/PizzaBoxRTEngine/Rendering/RenderData/AccelerationStructure.cpp"
     #"${CMAKE_CURRENT_SOURCE_DIR}/PizzaBoxRTEngine/PizzaBoxRTEngine/VulkanHelp/Context.cpp"
-)
+    "${CMAKE_CURRENT_SOURCE_DIR}/PizzaBoxRTEngine/PizzaBoxRTEngine/app.cpp"
+ "PizzaBoxRTEngine/PizzaBoxRTEngine/VulkanHelp/vk_common.h")
 
 add_executable(PizzaBox
     "${CMAKE_CURRENT_SOURCE_DIR}/PizzaBoxRTEngine/PizzaBoxRTEngine/main.cpp"
     ${IMGUI_SOURCES}
     ${ENGINE_SOURCES}
-)
+ )
 
 include_directories(PizzaBox PUBLIC 
     "${CMAKE_CURRENT_SOURCE_DIR}/PizzaBoxRTEngine/PizzaBoxRTEngine"
@@ -37,6 +42,15 @@ include_directories(PizzaBox PUBLIC
     "${CMAKE_CURRENT_SOURCE_DIR}/External/glm/glm"
 )
 
+# Volk Linking
+if (WIN32)
+   set(VOLK_STATIC_DEFINES VK_USE_PLATFORM_WIN32_KHR)
+endif()
+
+add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/External/volk")
+target_link_libraries(PizzaBox PRIVATE volk)
+
+# Vulkan Linking
 find_package(Vulkan REQUIRED)
 target_link_libraries(PizzaBox PRIVATE Vulkan::Vulkan)
 
