--- a/PizzaBoxRTEngine/PizzaBoxRTEngine/PizzaBoxRTEngine.vcxproj
+++ b/PizzaBoxRTEngine/PizzaBoxRTEngine/PizzaBoxRTEngine.vcxproj
@@ -104,7 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>D:\Misc Coding Projects\PizzaBoxRTEngine\External\imgui\backends;D:\Misc Coding Projects\PizzaBoxRTEngine\External\imgui;D:\Misc Coding Projects\PizzaBoxRTEngine\External\glm;D:\Misc Coding Projects\PizzaBoxRTEngine\External\glfw-3.3.8.bin.WIN64\include;D:\Vulkan 1.3.243.0\Include;D:\Misc Coding Projects\PizzaBoxRTEngine\External\glew-2.1.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Misc Coding Projects\PizzaBoxRTEngine\External\imgui\backends;D:\Misc Coding Projects\PizzaBoxRTEngine\External\imgui;D:\Misc Coding Projects\PizzaBoxRTEngine\External\glm;D:\Misc Coding Projects\PizzaBoxRTEngine\External\glfw-3.3.8.bin.WIN64\include;D:\Misc Coding Projects\PizzaBoxRTEngine\External\glew-2.1.0\include;D:\Vulkan\Vulkan 1.3.250.1\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
@@ -122,7 +122,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>D:\Misc Coding Projects\PizzaBoxRTEngine\External\imgui\backends;D:\Misc Coding Projects\PizzaBoxRTEngine\External\imgui;D:\Misc Coding Projects\PizzaBoxRTEngine\External\glm;D:\Misc Coding Projects\PizzaBoxRTEngine\External\glfw-3.3.8.bin.WIN64\include;D:\Vulkan 1.3.243.0\Include;D:\Misc Coding Projects\PizzaBoxRTEngine\External\glew-2.1.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Misc Coding Projects\PizzaBoxRTEngine\External\imgui\backends;D:\Misc Coding Projects\PizzaBoxRTEngine\External\imgui;D:\Misc Coding Projects\PizzaBoxRTEngine\External\glm;D:\Misc Coding Projects\PizzaBoxRTEngine\External\glfw-3.3.8.bin.WIN64\include;D:\Misc Coding Projects\PizzaBoxRTEngine\External\glew-2.1.0\include;D:\Vulkan\Vulkan 1.3.250.1\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
